...
            "state": "translated",
            "value": "关于心绪日记"
          }
        }
      }
    },
    "关闭": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Close"
...
            "state": "translated",
            "value": "放弃编辑？"
          }
        }
      }
    },
    "新建时刻": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "New Moment"
...
